--- a/web/themes/contrib/zircon/sass/page.scss
+++ b/web/themes/contrib/zircon/sass/page.scss
@@ -133,11 +133,17 @@
     #block-views-block-tickets-block-1 {
         padding: 10px;
         background-color: #ffe4e1;
+        div div div div {
+            margin-bottom: 0px;
+        }
     }
 
     #block-views-block-tickets-er-block-1 {
         padding: 10px;
         background-color: #dfffa5;
+        .views-row {
+            margin-bottom: 0px;
+        }
     }
 
     div#block-zircon-content p.button-par {
